--- a/index.html
+++ b/index.html
@@ -13,14 +13,19 @@
   </style>
 </head>
 <body>
-
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
   
+  <main>
+    <img src="./images/image-qr-code.png" alt="image of a qr code" class="image">
+
+    <div class="contentContainer">
+      <h2 class="heading">Improve your front-end skills by building projects</h2>
+      <p class="description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+      
+    </div>
+  </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://linktr.ee/romeocodes">Romeo Codes</a>.
   </div>
 </body>
 </html>
